# opus

./: .gitignore  HOW_TO_USE_RECIPES.md  LICENSE  PYDANTIC_MIGRATION.md  README.md  RECIPE_QUICKSTART.md  config.yaml  demo_subagents.py  pyproject.toml  test_config.py  test_pydantic_models.py  test_subagents.py
docs/: OpenAIResponses.md  PROVIDERS.md  RECIPES.md  TOOLS.md  subagents.md
examples/: config-sample.yaml  config_anthropic.yaml  config_kimi_k2.yaml  config_openai.yaml  config_openai_responses.yaml
examples/recipes/: api-spec-review.yaml  python-code-review.yaml
examples/tools/: TOOL_PARAMETERS.md  fetch-logs.yaml  fetch_logs.py  uv-inline-script.yaml
recipes/: weekly-report.yaml
src/opus/: __init__.py  agent.py  cli.py  config.py  console_helper.py  error_recovery.py  models.py  prompt.py  themes.py  tui.py  ui.py
src/opus/models/: __init__.py  config.py  messages.py
src/opus/providers/: README.md  __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  litellm_provider.py  openai_provider.py  oracle_provider.py
src/opus/recipes/: __init__.py  executor.py  loader.py  markdown_parser.py  yaml_parser.py
src/opus/tools/: __init__.py  ask_approval.py  current_time.py  edit.py  executor.py  fetch.py  fetch_url.py  file_edit.py  file_read.py  file_write.py  loader.py  read.py  recipe_tool.py  run_recipe.py  run_subagents.py  write.py
