[project]
name = "opus"
version = "0.1.0"
description = "Terminal-based AI agent for software engineering automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Owain Lewis", email = "owain@owainlewis.com" }
]
keywords = ["ai", "agent", "automation", "llm", "cli", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "html2text>=2020.1.16",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# LLM Provider SDKs (install what you need)
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
oracle = ["oci>=2.119.0"]
litellm = ["litellm>=1.0.0"]

# Provider bundles
providers-native = ["anthropic>=0.40.0", "openai>=1.50.0"]  # Most common native providers
providers-all = ["anthropic>=0.40.0", "openai>=1.50.0", "oci>=2.119.0", "litellm>=1.0.0"]  # All providers

# Convenience: all optional dependencies
all = ["anthropic>=0.40.0", "openai>=1.50.0", "oci>=2.119.0", "litellm>=1.0.0"]

[project.urls]
Homepage = "https://github.com/owainlewis/opus"
Documentation = "https://github.com/owainlewis/opus/blob/main/README.md"
Repository = "https://github.com/owainlewis/opus"
Issues = "https://github.com/owainlewis/opus/issues"

[project.scripts]
opus = "opus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opus"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
